# genetic-algorithm-rust

./: Cargo.toml  README.md
src/: breeding.rs  chromosome.rs  fitness_calculator.rs  gen.rs  generation.rs  global_constants.rs  incubator.rs  individual.rs  lib.rs  main.rs  random_utils.rs  u64s.rs  utils.rs  zygote.rs
tests/: regression.rs
