[package]
name = "genetic-algorithm"
version = "0.1.0"
authors = ["Bohdan Kolesnyk <jinnzest@users.noreply.github.com>"]

[dependencies]
rand = "0.3"
rand_derive = "0.3"
comp="0.2.1"
lazy_static = "0.2.8"
conv = "0.3.3"

[dev-dependencies]
quickcheck = "0.4.1"
quickcheck_macros = "0.6.1"

[lib]
test = false